implemented custom json mapping for Duration field